# stozer

./: .gitmodules  CMakeLists.txt  README.md
src/: CMakeLists.txt  main.cpp  process.cpp  stozer.cpp  stozer.h  utils.cpp  utils.h
src/userspace/: argumentator.cpp  argumentator.h  configurator.cpp  configurator.h  gde.cpp  gde.h  krsh.cpp  krsh.h  utils.h
src/userspace/fs/: gde.cpp  idi.cpp  idi.h  kopiraj.cpp  kopiraj.h  listaj.cpp  listaj.h  napravi.cpp  napravi.h  pomeri.cpp  pomeri.h  ukloni.cpp  ukloni.h
src/userspace/izvrsi/: executor.cpp  files.cpp  izvrsi.cpp  izvrsi.h
src/userspace/uredi/: files.cpp  input.cpp  tui.cpp  uredi.cpp  uredi.h
tests/: CMakeLists.txt  filesystem_tests.cpp  main.cpp
